@@ -709,6 +709,7 @@ typedef struct _CPyMOL {
   ov_word lex_auto_copy_images;
   ov_word lex_moe_separate_chains;
   ov_word lex_transparency_global_sort;
+  ov_word lex_hide_long_bonds;
 } _CPyMOL;
 
 /* convenience functions -- inline */
@@ -1425,7 +1426,7 @@ static OVstatus PyMOL_InitAPI(CPyMOL *I)
   LEX_SETTING(auto_copy_images, 557);
   LEX_SETTING(moe_separate_chains, 558);
   LEX_SETTING(transparency_global_sort, 559);
-
+  LEX_SETTING(hide_long_bonds, 560);
   return_OVstatus_SUCCESS;
 }
 
